Inline critical CSS variables in HTML head to fix production build

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,36 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dr Karthika Skin</title>
+    <style>
+      :root {
+        --primary: #E8D5C4;
+        --primary-dark: #D4B5A0;
+        --primary-light: #F5EBE0;
+        --accent: #C9A88D;
+        --bg-main: #FDFBF7;
+        --bg-card: #FFFFFF;
+        --text-primary: #2C2C2C;
+        --text-secondary: #6B6B6B;
+        --border: #E5E5E5;
+        --shadow: rgba(0, 0, 0, 0.08);
+        --success: #7FB069;
+        --warning: #E9B44C;
+        --error: #E07A5F;
+        --nav-width: 250px;
+        --top-nav-height: 70px;
+      }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      body {
+        font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+        background: var(--bg-main);
+        color: var(--text-primary);
+        line-height: 1.6;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
